// ReSharper disable All

using UnityEngine;

public static class DL_AnimParams
{
    #region Fields
    
    public static int PLAYER_MOVEMENT_SPEED = Animator.StringToHash("PlayerMovementSpeed");    
    public static int PLAYER_ATTACK_SOFT = Animator.StringToHash("PlayerAttackSoft");    
    public static int PLAYER_ATTACK_HEAVY = Animator.StringToHash("PlayerAttackHeavy");    
    
    #endregion
}